--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,7 @@
     {
       "type": "node",
       "request": "attach",
+      "port": 9229,
       "name": "Debug NodeJs API",
       "skipFiles": ["<node_internals>/**"],
       "program": "${file}",
